添加更多翻译

--- a/language/zh.lang
+++ b/language/zh.lang
@@ -1,13 +1,45 @@
 [MainWindow]
-My Application=我的应用程序
-Open Main Window=打开主界面
-Exit=退出
-My Application - Right click for menu=我的应用程序 - 右键查看菜单
-Restore All Windows=恢复所有窗口
-%1 windows are currently hidden=当前有 %1 个窗口被隐藏
+My Application - Window Manager=我的应用 - 窗口管理器
+Error=错误
+Failed to initialize Windows tray manager=初始化 Windows 托盘管理器失败
+Hidden Windows Manager=隐藏窗口管理器
+Currently Hidden Windows=当前隐藏的窗口
+Refresh List=刷新列表
+Restore Selected=恢复选中
+Restore All=恢复全部
 No windows are currently hidden=当前没有隐藏的窗口
-Unknown Window=未知窗口
+Quick Actions=快速操作
+Minimize Current Active Window=最小化当前活动窗口
+Hotkey: Win + Shift + Z=热键: Win + Shift + Z
+Application Settings=应用设置
+General Settings=常规设置
+Start with Windows=开机启动
+Enable Hotkey (Win+Shift+Z)=启用热键 (Win+Shift+Z)
 Auto Refresh Settings=自动刷新设置
+seconds=秒
 Enable auto refresh=启用自动刷新
-Refresh interval:=刷新间隔：
- seconds= 秒
+Refresh interval:=刷新间隔:
+Window Settings=窗口设置
+Maximum hidden windows:=最大隐藏窗口数:
+windows=个窗口
+Language:=语言:
+Save Settings=保存设置
+About=关于
+Window Tray Manager=窗口托盘管理器
+Version=版本
+Description=描述
+Usage=用法
+Thank you for using our application!=感谢使用我们的应用！
+Information=信息
+Please select a window to restore=请选择要恢复的窗口
+Restore=恢复
+Would restore: %1=将要恢复: %1
+Success=成功
+Settings saved successfully!=设置保存成功！
+%1 windows are currently hidden=当前有 %1 个窗口被隐藏
+Open Main Window=打开主窗口
+Exit=退出
+Window Tray Manager - Right click for menu=窗口托盘管理器 - 右键显示菜单
+Restore All Windows=恢复所有窗口
+Settings=设置
+Main=主窗口
