更新翻译键值

--- a/language/en.lang
+++ b/language/en.lang
@@ -30,8 +30,8 @@ Currently Hidden Windows=Currently Hidden Windows
 No windows are currently hidden=No windows are currently hidden
 %1 windows are currently hidden=%1 windows are currently hidden
 Restore=Restore
-Restore Selected=Restore Selected
-Restore All=Restore All
+Restore Selected=Restore Selected Window
+Restore All=Restore All Windows
 Restore All Windows=Restore All Windows
 Restore Window=Restore Window
 Please select a window to restore=Please select a window to restore
@@ -42,13 +42,13 @@ Restored window: %1=Restored window: %1
 
 ; === Quick Actions/Tray Menu/Right-click Menu ===
 Quick Actions=Quick Actions
-Minimize Current Active Window=Minimize Current Active Window
+Minimize Current Active Window=Hide Current Active Window
 Open Main Window=Open Main Window
 Exit=Exit
 Traynex - Right click for menu=Traynex - Right click for menu
 Hide to Tray=Hide to Tray
-Hide to Tray Icon=Hide to Tray Icon
-Hide to Tray Menu=Hide to Tray Menu
+Hide to Tray Icon=Hide to System Tray
+Hide to Tray Menu=Hide to App Tray
 Restore from Tray=Restore from Tray
 Bring to Front=Bring to Front
 End Task=End Task
@@ -59,8 +59,8 @@ Window hidden to app tray successfully=Window hidden to app tray successfully
 
 ; === Hotkeys/Shortcut Information ===
 Hotkey=Hotkey
-Hotkey: Win + Shift + Z=Hotkey: Win + Shift + Z
-Enable Hotkey (Win+Shift+Z)=Enable Hotkey (Win+Shift+Z)
+Hotkey: Win + Shift Z=Hotkey: Win + Shift Z
+Enable Hotkey=Enable Hotkey
 Double-click tray icon to restore window=Double-click tray icon to restore window
 Hotkey support (Win+Shift+Z)=Hotkey support (Win+Shift+Z)
 
@@ -69,7 +69,7 @@ Application Settings=Application Settings
 General Settings=General Settings
 Start with Windows=Start with Windows
 Always on Top=Always on Top
-Keep the main window always on top of other windows=Keep the main window always on top of other windows
+Keep the main window always on top of other windows=Keep main window always on top
 Auto Refresh Settings=Auto Refresh Settings
 Enable auto refresh=Enable auto refresh
 Refresh interval:=Refresh interval:
@@ -90,7 +90,7 @@ Information=Information
 Success=Success
 Failed to initialize Windows tray manager=Failed to initialize Windows tray manager
 The selected window is no longer available=The selected window is no longer available
-Failed to restore the window=Failed to restore the window
+Failed to restore the window=Failed to restore window
 Please select a window to hide=Please select a window to hide
 Please select a window to highlight=Please select a window to highlight
 Please select a window to toggle always on top=Please select a window to toggle always on top
@@ -99,7 +99,7 @@ Failed to hide window to tray=Failed to hide window to tray
 Settings saved successfully!=Settings saved successfully!
 Cannot get window class name=Cannot get window class name
 Cannot hide system windows=Cannot hide system windows
-Failed to highlight the window=Failed to highlight the window
+Failed to highlight the window=Failed to highlight window
 Failed to toggle window always on top=Failed to toggle window always on top
 Failed to bring window to front=Failed to bring window to front
 Failed to end task=Failed to end task
@@ -109,11 +109,11 @@ Visit GitHub Repository=Visit GitHub Repository
 Check for Updates=Check for Updates
 A powerful tool to manage your windows efficiently.=A powerful tool to manage your windows efficiently.
 Features:=Features:
-Minimize windows to system tray=Minimize windows to system tray
+Minimize windows to system tray=Hide windows to system tray
 Restore windows with double-click=Restore windows with double-click
 Multiple window management=Multiple window management
-A powerful window management tool that allows you to minimize windows to system tray.=A powerful window management tool that allows you to minimize windows to system tray.
-Win + Shift + Z - Minimize active window to tray=Win + Shift + Z - Minimize active window to tray
+A powerful window management tool that allows you to minimize windows to system tray.=A powerful window management tool that allows you to hide windows to system tray.
+Win + Shift + Z - Minimize active window to tray=Win + Shift + Z - Hide active window to tray
 Double-click tray icon to restore window=Double-click tray icon to restore window
 
 ; === System Tray Related ===
@@ -131,3 +131,26 @@ Open File Location=Open File Location
 File Properties=File Properties
 New Rule=New Rule
 Flash=Flash
+
+; === New Translations ===
+Hotkey Settings=Hotkey Settings
+Minimize to Tray:=Hide to Tray:
+Set Hotkey=Set Hotkey
+Clear=Clear
+Click to set hotkey=Click to set hotkey
+Press key combination...=Press key combination...
+Hotkey setting cancelled=Hotkey setting cancelled
+No hotkey set=No hotkey set
+Failed to register hotkey. It may be already in use.=Failed to register hotkey. It may be already in use.
+Hotkey set successfully: %1=Hotkey set successfully: %1
+Unknown=Unknown
+Process: %1\nHandle: 0x%2=Process: %1\nHandle: 0x%2
+Window=Window
+Minimize to Tray=Hide to Tray
+Restore Window=Restore Window
+Restore Last Window=Restore Last Window
+Restore All Windows=Restore All Windows
+Available=Available
+Unavailable=Unavailable
+System Tray Hidden=System Tray Hidden
+App Tray Hidden=App Tray Hidden
