--- a/language/zh.lang
+++ b/language/zh.lang
@@ -1,6 +1,5 @@
 [MainWindow]
 
-; === 主窗口/标签页/标题/基础信息 ===
 Main=主页
 Settings=设置
 About=关于
@@ -9,8 +8,6 @@ Version=版本
 Description=描述
 Usage=用法
 Thank you for using Traynex!=感谢使用 Traynex！
-
-; === 窗口列表/表格相关翻译 ===
 Window Title=窗口标题
 Process=进程
 Status=状态
@@ -23,32 +20,28 @@ Refresh List=刷新列表
 Class=类
 Process ID=进程ID
 Application=应用程序
-
-; === 隐藏窗口管理/恢复操作 ===
 Hidden Windows Manager=隐藏窗口管理器
 Currently Hidden Windows=当前隐藏的窗口
 No windows are currently hidden=当前没有隐藏的窗口
 %1 windows are currently hidden=当前有 %1 个窗口被隐藏
 Restore=恢复
-Restore Selected=恢复选中
-Restore All=恢复全部
+Restore Selected=恢复选中窗口
+Restore All=恢复所有窗口
 Restore All Windows=恢复所有窗口
 Restore Window=恢复窗口
 Please select a window to restore=请选择要恢复的窗口
 Would restore: %1=将要恢复: %1
-Restore Last Window=还原上一个窗口
+Restore Last Window=恢复上一个窗口
 No hidden windows to restore=没有可恢复的隐藏窗口
 Restored window: %1=已恢复窗口: %1
-
-; === 快速操作/托盘菜单/右键菜单 ===
 Quick Actions=快速操作
-Minimize Current Active Window=最小化当前活动窗口
+Minimize Current Active Window=隐藏当前活动窗口
 Open Main Window=打开主窗口
 Exit=退出
 Traynex - Right click for menu=Traynex - 右键点击显示菜单
 Hide to Tray=隐藏到托盘
-Hide to Tray Icon=隐藏到托盘图标
-Hide to Tray Menu=隐藏到托盘菜单
+Hide to Tray Icon=隐藏到系统托盘
+Hide to Tray Menu=隐藏到应用托盘
 Restore from Tray=从托盘恢复
 Bring to Front=置顶
 End Task=结束任务
@@ -56,15 +49,11 @@ Highlight Window=高亮窗口
 Always on Top=保持置顶
 Toggle Always on Top=切换置顶状态
 Window hidden to app tray successfully=窗口已成功隐藏到应用托盘
-
-; === 快捷键/热键信息 ===
 Hotkey=热键
 Hotkey: Win + Shift + Z=热键: Win + Shift + Z
-Enable Hotkey (Win+Shift+Z)=启用热键 (Win+Shift+Z)
+Enable Hotkey=启用热键
 Double-click tray icon to restore window=双击托盘图标恢复窗口
 Hotkey support (Win+Shift+Z)=热键支持 (Win+Shift+Z)
-
-; === 设置页面/配置项 ===
 Application Settings=应用设置
 General Settings=常规设置
 Start with Windows=开机启动
@@ -80,10 +69,8 @@ windows=个窗口
 Hidden Windows=隐藏窗口
 Language:=语言:
 Save Settings=保存设置
-Keep the main window always on top of other windows=保持主窗口始终位于其他窗口的顶部
+Keep the main window always on top of other windows=保持主窗口始终置顶
 Maximum hidden windows:=最大隐藏窗口数:
-
-; === 错误/警告/成功/提示消息 ===
 Error=错误
 Warning=警告
 Information=信息
@@ -103,26 +90,20 @@ Failed to highlight the window=高亮窗口失败
 Failed to toggle window always on top=切换窗口置顶状态失败
 Failed to bring window to front=置顶窗口失败
 Failed to end task=结束任务失败
-
-; === 关于页面/功能列表/外部链接 ===
 Visit GitHub Repository=访问 GitHub 仓库
 Check for Updates=检查更新
 A powerful tool to manage your windows efficiently.=一个功能强大的窗口管理工具。
 Features:=功能列表:
-Minimize windows to system tray=最小化窗口到系统托盘
+Minimize windows to system tray=隐藏窗口到系统托盘
 Restore windows with double-click=双击恢复窗口
 Multiple window management=多窗口管理
-A powerful window management tool that allows you to minimize windows to system tray.=一个强大的窗口管理工具，可以将窗口最小化到系统托盘。
-Win + Shift + Z - Minimize active window to tray=Win + Shift + Z - 最小化活动窗口到托盘
+A powerful window management tool that allows you to minimize windows to system tray.=一个强大的窗口管理工具，可以将窗口隐藏到系统托盘。
+Win + Shift + Z - Minimize active window to tray=Win + Shift + Z - 隐藏活动窗口到托盘
 Double-click tray icon to restore window=双击托盘图标恢复窗口
-
-; === 系统托盘相关 ===
 Unknown Window=未知窗口
 System Tray=系统托盘
 Tray Icon=托盘图标
 Tray Menu=托盘菜单
-
-; === 上下文菜单操作 ===
 Copy=复制
 Window Class=窗口类
 Window Name=窗口名称
@@ -131,3 +112,24 @@ Open File Location=打开文件所在位置
 File Properties=文件属性
 New Rule=新规则
 Flash=高亮
+Hotkey Settings=热键设置
+Minimize to Tray:=隐藏到托盘:
+Set Hotkey=设置热键
+Clear=清除
+Click to set hotkey=点击设置热键
+Press key combination...=按下按键组合...
+Hotkey setting cancelled=热键设置已取消
+No hotkey set=未设置热键
+Failed to register hotkey. It may be already in use.=注册热键失败，可能已被占用。
+Hotkey set successfully: %1=热键设置成功: %1
+Unknown=未知
+Process: %1\nHandle: 0x%2=进程: %1\n句柄: 0x%2
+Window=窗口
+Minimize to Tray=隐藏到托盘
+Restore Window=恢复窗口
+Restore Last Window=恢复上一个窗口
+Restore All Windows=恢复所有窗口
+Available=可用
+Unavailable=不可用
+System Tray Hidden=系统托盘隐藏
+App Tray Hidden=应用托盘隐藏
