--- a/language/zh.lang
+++ b/language/zh.lang
@@ -125,7 +125,7 @@ Hotkey set successfully: %1=热键设置成功: %1
 Unknown=未知
 Process: %1\nHandle: 0x%2=进程: %1\n句柄: 0x%2
 Window=窗口
-Minimize to Tray=隐藏到托盘
+Minimize to Tray:=隐藏到托盘:
 Restore Window=恢复窗口
 Restore Last Window=恢复上一个窗口
 Restore All Windows=恢复所有窗口
