--- a/language/en.lang
+++ b/language/en.lang
@@ -146,7 +146,7 @@ Hotkey set successfully: %1=Hotkey set successfully: %1
 Unknown=Unknown
 Process: %1\nHandle: 0x%2=Process: %1\nHandle: 0x%2
 Window=Window
-Minimize to Tray=Hide to Tray
+Minimize to Tray Icon:=Hide to Tray Icon:
 Restore Window=Restore Window
 Restore Last Window=Restore Last Window
 Restore All Windows=Restore All Windows
