--- a/language/zh.lang
+++ b/language/zh.lang
@@ -113,7 +113,7 @@ File Properties=文件属性
 New Rule=新规则
 Flash=高亮
 Hotkey Settings=热键设置
-Minimize to Tray:=隐藏到托盘:
+Minimize to Tray Icon:=将当前窗口隐藏到托盘图标:
 Set Hotkey=设置热键
 Clear=清除
 Click to set hotkey=点击设置热键
@@ -125,7 +125,6 @@ Hotkey set successfully: %1=热键设置成功: %1
 Unknown=未知
 Process: %1\nHandle: 0x%2=进程: %1\n句柄: 0x%2
 Window=窗口
-Minimize to Tray:=隐藏到托盘:
 Restore Window=恢复窗口
 Restore Last Window=恢复上一个窗口
 Restore All Windows=恢复所有窗口
