--- a/language/en.lang
+++ b/language/en.lang
@@ -154,3 +154,9 @@ Available=Available
 Unavailable=Unavailable
 System Tray Hidden=System Tray Hidden
 App Tray Hidden=App Tray Hidden
+Mute Process=Mute Process
+Please select a window to mute/unmute=Please select a process to mute/unmute
+Process muted.=Process muted
+Process unmuted.=Process unmuted
+Failed to mute/unmute process.=Failed to mute/unmute process
+Opacity=Opacity
