--- a/language/zh.lang
+++ b/language/zh.lang
@@ -132,3 +132,9 @@ Available=可用
 Unavailable=不可用
 System Tray Hidden=系统托盘隐藏
 App Tray Hidden=应用托盘隐藏
+Mute Process=静音进程
+Process muted.=进程已静音
+Process unmuted.=进程已取消静音
+Please select a window to mute/unmute=请选择要静音/取消静音的进程
+Failed to mute/unmute process.=静音/取消静音进程失败
+Opacity=透明度
