添加一些关于文件的菜单

--- a/language/en.lang
+++ b/language/en.lang
@@ -160,3 +160,5 @@ Process muted.=Process muted
 Process unmuted.=Process unmuted
 Failed to mute/unmute process.=Failed to mute/unmute process
 Opacity=Opacity
+Open File Location=Open File Location
+File Properties=File Properties
